# daddy-tools

./: Cargo.toml  Cross.toml  build.rs
.cargo/: config.toml
.github/workflows/: build.yml
dmsrc/: file.dm  http.dm  jobs.dm  main.dm  regexp.dm  transliteration.dm
scripts/: prepare_binaries.sh
src/: error.rs  file.rs  http.rs  lib.rs  regexp.rs
tests/: dm-tests.rs
tests/dm/: common.dm  http.dme  regexp.dme  text.dme  transliteration.dme
