[package]
name = "rust-utils"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = true

[dependencies]
translit = {version = "0.5.0", optional = true }
regex = {version = "1.10.4", optional = true }

[features]
default = [
    "transliteration",
    "regexp"
]

transliteration = ["translit"]
regexp = ["regex"]

