[package]
name = "rust-utils"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = true

[dependencies]
thiserror = "1.0.6"
translit = {version = "0.5.0", optional = true }
regex = {version = "1.10.4", optional = true }
regex-cache  = {version = "0.2.1", optional = true }
base64 = {version = "0.22.1", optional = true}

[features]
default = [
    "transliteration",
    "regexp",
    "file"
]

transliteration = ["translit"]
regexp = ["regex", "regex-cache"]
file = ["base64"]
