[package]
name = "rust-utils"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
debug = true

[dependencies]
base64 = { version = "0.22.1", optional = true }
flume = { version = "0.11", optional = true }
once_cell = { version = "1.19", optional = true }
regex = { version = "1.10.4", optional = true }
regex-cache = { version = "0.2.1", optional = true }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "1.0.6"
translit = { version = "0.5.0", optional = true }
ureq = { version = "2.10.0", optional = true }

[features]
default = ["transliteration", "regexp", "file", "http"]

file = ["base64"]
http = ["jobs", "once_cell", "serde", "serde_json", "ureq"]
regexp = ["regex", "regex-cache"]
transliteration = ["translit"]

# internal feature-like things
jobs = ["flume"]
